@@ -345,6 +345,25 @@ name|h
 operator|.
 name|validateUpdate
 argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"7"
+argument_list|,
+literal|"lowerfilt"
+argument_list|,
+literal|"zxcvqwtp fg hj"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|h
+operator|.
+name|validateUpdate
+argument_list|(
 name|commit
 argument_list|()
 argument_list|)
@@ -1598,6 +1617,76 @@ literal|"1"
 argument_list|)
 argument_list|,
 literal|"//lst[@name='collation'][1 ]/str[@name='collationQuery']='lowerfilt:((+printable +in +puntable +plantable))'"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"zxcv AND qwtp AND fghj"
+argument_list|,
+literal|"qt"
+argument_list|,
+literal|"spellCheckWithWordbreak"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"lowerfilt"
+argument_list|,
+literal|"indent"
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_BUILD
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_ACCURACY
+argument_list|,
+literal|".75"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_EXTENDED_RESULTS
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_COLLATE
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_COLLATE_EXTENDED_RESULTS
+argument_list|,
+literal|"true"
+argument_list|,
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_MAX_COLLATIONS
+argument_list|,
+literal|"10"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='collation'][1 ]/str[@name='collationQuery']='zxcvqwtp AND (fg AND hj)'"
 argument_list|)
 expr_stmt|;
 block|}
